--- a/android/build.gradle
+++ b/android/build.gradle
@@ -82,6 +82,15 @@ android {
             }
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = '11'
+    }
 }
 
 def reactNativeArchitectures() {
